--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ table {
 
 /* End Reset */
 
+:root {
+    --strong: #312e81;
+    --light: #c7d2fe;
+    --white: #eef2ff;
+}
 
 body {
     width: 100vw;
@@ -65,7 +70,7 @@ body {
 
 section.sidebar {
     display: grid;
-    background-color: red;
+    background-color: var(--strong);
     grid-template-rows: 1fr 6fr 2fr;
     grid-row: 1/3;
     grid-column: 1/2;
@@ -75,7 +80,7 @@ section.header {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
-    background-color: green;
+    background-color: var(--white);
     grid-column: 2/3;
     grid-row: 1/2;
 }
@@ -125,7 +130,7 @@ section.content {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 12fr 1fr;
-    background-color: blue;
+    background-color: var(--light);
 }
 
 div.titles {
