--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
     grid-template-columns: minmax(200px, 1fr) 5fr;
     grid-template-rows: 1fr 5fr;
     font-family: 'roboto';
-    background-color: var(--light)
+    background-color: var(--light);
 }
 
 
@@ -175,7 +175,6 @@ div.search>a {
 
 div.search>input {
     background-color: var(--light);
-    border: var(--light);
     border-radius: 1.5rem;
     width: 100%;
     max-width: 20rem;
@@ -246,6 +245,7 @@ section.content {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 12fr 1fr;
+    gap: 1rem;
 }
 
 div.titles {
@@ -253,6 +253,7 @@ div.titles {
     grid-column: 1/3;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    align-items: end;
 }
 
 div.projects {
@@ -261,11 +262,32 @@ div.projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 1rem;
 }
 
+div.projects>div.project>div.title{
+    grid-column: 2/3;
+    align-self: end;
+}
+
+div.projects>div.project>div.description{
+    grid-column: 2/3;
+    align-self: start;
+    font-size: .8rem;
+}
+
+div.projects>div.project>div.controls{
+    grid-column: 2/3;
+    align-self: end;
+    justify-self: end;
+}
 
 div.project {
-    display: flex;
+    display: grid;
+    background-color: var(--white);
+    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 15fr 1fr;
 }
 
 div.side-content {
@@ -277,6 +299,7 @@ div.side-content {
 
 div.announcements {
     display: grid;
+    background-color: var(--white);
 }
 
 div.trending {
@@ -289,6 +312,7 @@ div.trending {
 
 div.trends {
     display: grid;
+    background-color: var(--white);
     grid-template-rows: repeat(4, 1fr);
 }
 
